...
        rawValue
    }

    var title: String {
        switch self {
        case .home: "Home"
        case .log: "Log"
        case .add: "Add"
        case .map: "Map"
        case .profile: "You"
        }
    }

...
